[project]
name = "dawn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "more-itertools>=10.7.0",
]

[project.scripts]
dawn = "dawn.__main__:main"

[build-system]
requires = ["hatchling>=1.0.0"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.4.0"]

[tool.mypy]
strict = true